--- a/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
@@ -32,11 +32,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="-10dp"
+                android:gravity="left"
+                android:layout_marginLeft="10dp"
                 android:layout_marginBottom="5dp">
 
                 <TextView
@@ -45,7 +46,36 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:text="Your Name"
-                    android:gravity="center"
+                    android:gravity="left"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="200dp"
+                android:layout_marginTop="-30dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="3dp"
+                    android:gravity="right"
+                    android:text="RP."
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/item.lapang.grid.harga"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="35dp"
+                    android:layout_marginTop="-22dp"
+                    android:gravity="right"
+                    android:text="Harga"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -66,19 +96,47 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:layout_marginLeft="10dp"
+        android:orientation="vertical"
         >
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="135dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Tanggal Pemesanan :"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Waktu Booking :"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="Total Pembayaran :"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="-65dp"
             >
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:orientation="vertical"
+                android:gravity="center">
             <TextView
                 android:id="@+id/id_tanggal_booking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textAlignment="center"
                 android:text="TANGGAL BOOKING"
                 android:layout_marginBottom="5dp"/>
             <TextView
@@ -86,14 +144,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="WAKTU BOOKING"
-                android:textAlignment="center"
                 android:layout_marginBottom="5dp"
                 />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:gravity="center"
+                android:layout_marginLeft="-15dp"
                 >
                 <TextView
                     android:layout_marginLeft="110dp"
@@ -109,8 +166,10 @@
                     />
             </LinearLayout>
         </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
         <Button
+            android:id="@+id/btngtopem"
             android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:text="Pembayaran"
