--- a/AppNgasal/app/src/main/res/layout/activity_wallet.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_wallet.xml
@@ -18,7 +18,7 @@
             android:textSize="35dp"
             android:textAlignment="center"
             android:layout_marginBottom="20dp"
-            android:text="Wallet"/>
+            android:text="Your Wallet"/>
         <Button
             android:id="@+id/btntop"
             android:layout_width="350dp"
