--- a/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
+++ b/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
@@ -25,9 +25,10 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="200dp"
+            android:layout_marginLeft="15dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="8dp">
+            android:layout_marginBottom="5dp">
 
             <TextView
                 android:id="@+id/item.lapang.grid.name"
@@ -48,15 +49,16 @@
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="115dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="-30dp"
+            android:layout_marginLeft="260dp"
+            android:layout_marginTop="-43dp"
             android:layout_gravity="right">
             <TextView
-                android:layout_width="40dp"
+                android:layout_width="28dp"
                 android:layout_height="wrap_content"
                 android:text="RP."
+                android:layout_marginLeft="25dp"
                 android:layout_gravity="right"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -65,7 +67,7 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:gravity="right"
+                android:gravity="left"
                 android:layout_marginTop="-20dp"
                 android:text="Harga"
                 android:textSize="18sp"
