--- a/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_detail_lapangan.xml
@@ -39,6 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
+                    android:paddingTop="-5dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -85,6 +86,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="200dp"
                         android:layout_marginTop="-65dp"
+                        android:layout_marginBottom="3dp"
                         android:orientation="vertical">
 
                         <TextView
@@ -108,6 +110,19 @@
                             android:text="Harga"
                             android:textSize="18sp"
                             android:textStyle="bold" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="90dp"
+                        android:layout_marginLeft="30dp"
+                        android:layout_gravity="right"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:id="@+id/jenis"
+                            android:layout_marginLeft="5dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Jenis"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
