--- a/AppNgasal/app/src/main/res/layout/activity_pembayaran.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_pembayaran.xml
@@ -8,74 +8,195 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="240dp"
+            android:layout_margin="10dp"
+            android:layout_marginBottom="-10dp"
+            android:background="@drawable/border"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/pemimage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/lap1"
+                    />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:background="@drawable/border"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-13dp">
+                    <TextView
+                        android:background="#dea717"
+                        android:layout_width="match_parent"
+                        android:layout_height="25dp"
+                        android:text="nama"
+                        android:textAlignment="center"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:textAllCaps="true"
+                        android:textColor="#FFFF"
+                        android:textSize="18dp"
+                        android:id="@+id/namalap"
+                        />
+            </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        >
+        android:layout_margin="10dp">
+        <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/border">
+        <LinearLayout
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginBottom="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nama Pemesan      :"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="6dp"
+                android:textSize="18sp"
+                />
+
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="150dp"
+            android:layout_marginLeft="-15dp"
+            android:layout_marginTop="12dp">
+            <TextView
+                android:text="Nama"
+                android:textAllCaps="true"
+                android:id="@+id/namasewa"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp">
+                />
+        </LinearLayout>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/border">
+            <LinearLayout
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginBottom="10dp">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Saku Anda  :"
-                    android:textSize="25dp"
+                    android:text="Tanggal Pemesan  :"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="6dp"
+                    android:textSize="18sp"
                     />
+
             </LinearLayout>
             <LinearLayout
-                android:layout_width="170dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="150dp"
-                android:layout_marginTop="-42dp"
-                android:orientation="vertical">
-
+                android:layout_marginLeft="-15dp"
+                android:layout_marginTop="11dp">
                 <TextView
-                    android:layout_width="40dp"
+                    android:text="Tanggal"
+                    android:textAllCaps="true"
+                    android:id="@+id/tglsewa"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginTop="3dp"
-                    android:gravity="right"
-                    android:text="RP."
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/itemwallet"
-                    android:layout_width="120dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="60dp"
-                    android:layout_marginTop="-30dp"
-                    android:gravity="left"
-                    android:text="Harga"
-                    android:textSize="25sp"
-                    android:textStyle="bold" />
+                    />
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_marginBottom="4dp"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp">
                 <TextView
-                    android:layout_width="match_parent"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:text="Biaya Sewa :"
-                    android:textSize="25dp"
+                    android:text="Jam Sewa              :"
+                    android:textSize="18sp"
                     />
             </LinearLayout>
             <LinearLayout
-                android:layout_width="170dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="150dp"
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="-42dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/waktusewa"
+                    android:layout_width="20dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="23dp"
+                    android:layout_marginTop="13dp"
+                    android:gravity="right"
+                    android:text="Ja"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="43dp"
+                    android:layout_marginTop="-21dp"
+                    android:gravity="left"
+                    android:text="JAM"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:layout_marginBottom="4dp"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Biaya Sewa            :"
+                    android:textSize="18sp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="130dp"
                 android:layout_marginTop="-42dp"
                 android:orientation="vertical">
 
@@ -83,10 +204,10 @@
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="3dp"
+                    android:layout_marginTop="12dp"
                     android:gravity="right"
                     android:text="RP."
-                    android:textSize="25sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -95,72 +216,58 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginLeft="60dp"
-                    android:layout_marginTop="-30dp"
+                    android:layout_marginTop="-21dp"
                     android:gravity="left"
                     android:text="Harga"
-                    android:textSize="25sp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
-            <View
-                android:layout_width="20dp"
-                android:layout_height="3dp"
-                android:layout_marginLeft="320dp"
-                android:layout_marginTop="-15dp"
-                android:background="@drawable/border">
-            </View>
         </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:background="@drawable/border">
-
-        </View>
-
         <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+            android:background="@drawable/border"
         android:orientation="vertical">
         <LinearLayout
-            android:layout_width="150dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Sisa Wallet  :"
-                android:textSize="25dp"
+                android:text="Saku Anda             :"
+                android:textSize="18sp"
                 />
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="-42dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="40dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="3dp"
-                android:gravity="right"
-                android:text="RP."
-                android:textSize="25sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="130dp"
+                android:layout_marginTop="-42dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/SisaWallet"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="60dp"
-                android:layout_marginTop="-30dp"
-                android:gravity="left"
-                android:text="Harga"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                <TextView
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="12dp"
+                    android:gravity="right"
+                    android:text="RP."
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/Sisawallet"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="-21dp"
+                    android:gravity="left"
+                    android:text="Harga"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -174,5 +281,6 @@
                 android:text="Bayar"
                 android:id="@+id/bayar"/>
         </LinearLayout>
+</LinearLayout>
 </LinearLayout>
 </LinearLayout>
