--- a/AppNgasal/app/src/main/res/layout/activity_wallet.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_wallet.xml
@@ -27,6 +27,17 @@
             android:background="#DEA717"
             android:text="TOP-UP HERE"
             />
+        <TextView
+            android:id="@+id/home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Back to menu"
+            android:textAllCaps="true"
+            android:textSize="14dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            />
 
     </LinearLayout>
 </LinearLayout>
