--- a/AppNgasal/app/src/main/res/layout/fragment_register.xml
+++ b/AppNgasal/app/src/main/res/layout/fragment_register.xml
@@ -29,7 +29,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
-                android:layout_height="300dp">
+                android:layout_height="wrap_content">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -138,6 +138,7 @@
                         />
                 </android.support.design.widget.TextInputLayout>
                 </LinearLayout>
+            </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -161,7 +162,6 @@
                     android:textStyle="bold"
                     android:layout_marginBottom="24dp"/>
                 </LinearLayout>
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
