--- a/AppNgasal/app/src/main/res/layout/activity_edit_profil.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_edit_profil.xml
@@ -61,8 +61,14 @@
         </View>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="310dp">
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
+            android:layout_margin="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
 
+        </com.github.mikephil.charting.charts.PieChart>
 
 
     </LinearLayout>
